--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "@faker-js/faker": "^10.2.0",
+    "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "glightbox": "^3.3.1",
+    "imagesloaded": "^5.0.0",
+    "install": "^0.13.0",
+    "isotope-layout": "^3.0.6",
+    "npm": "^11.7.0",
+    "swiper": "^12.0.3",
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@types/imagesloaded": "^4.1.7",
+    "@types/isotope-layout": "^3.0.15",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
