--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/imagesloaded": "^4.1.7",
     "@types/isotope-layout": "^3.0.15",
     "@types/node": "^24.10.1",
